--- a/less/_header.less
+++ b/less/_header.less
@@ -64,6 +64,7 @@
     color: #cacaca;
     cursor: pointer;
     transition: color .4s;
+    outline: none;
     
     &:hover {
         color: #f49a51;
