--- a/css/autoprefixer/main.css
+++ b/css/autoprefixer/main.css
@@ -86,6 +86,7 @@ button {
   line-height: 90px;
   color: #4c443f;
   margin-bottom: 30px;
+  text-transform: uppercase;
 }
 .description-block {
   display: -webkit-box;
@@ -138,6 +139,23 @@ button {
   background-color: #929292;
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
+}
+.word-decor {
+  font-family: 'Playfair Display SC';
+  font-size: 770px;
+  font-weight: 800;
+  line-height: 700px;
+  position: absolute;
+  left: 50%;
+  top: -155px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background: url(../img/word-bg.png) repeat center;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  z-index: -1;
+  text-transform: uppercase;
 }
 /* Main-form */
 .main-form {
@@ -511,6 +529,10 @@ button {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-close:before {
+  content: "\e908";
+  color: #cec2bb;
+}
 .icon-couple:before {
   content: "\e902";
   color: #877f7a;
@@ -619,6 +641,7 @@ button {
   cursor: pointer;
   -webkit-transition: color 0.4s;
   transition: color 0.4s;
+  outline: none;
 }
 .header__call-back__button:hover {
   color: #f49a51;
@@ -658,16 +681,36 @@ button {
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
+.main-block__wrapper .svg-decor {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+.main-block__wrapper .svg-decor .text {
+  -webkit-transform: translate(calc(50% - 18px), calc(50% - 5px));
+  transform: translate(calc(50% - 18px), calc(50% - 5px));
+}
 .main-block__item {
   width: 50%;
   padding-top: 220px;
 }
-.main-block__item:last-child {
+.main-block__item:nth-child(2) {
   padding-left: 250px;
 }
-.main-block__item:last-child .main-block__decor {
+.main-block__item:nth-child(2) .main-block__decor {
   left: initial;
   right: 0px;
+}
+.main-block__item:nth-child(2) .main-block__decor::before {
+  right: initial;
+  left: 0px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#f3bb8d), to(rgba(243, 187, 141, 0)));
+  background-image: -webkit-linear-gradient(left, #f3bb8d 0%, rgba(243, 187, 141, 0) 100%);
+  background-image: linear-gradient(90deg, #f3bb8d 0%, rgba(243, 187, 141, 0) 100%);
 }
 .main-block__item:hover .main-block__decor {
   opacity: 1;
@@ -679,7 +722,7 @@ button {
   width: 100%;
   height: 100%;
   opacity: 0;
-  background-color: rgba(53, 48, 44, 0.902);
+  background-color: rgba(53, 48, 44, 0.9);
   width: 50%;
   z-index: -1;
   -webkit-transition: opacity 0.4s;
@@ -687,6 +730,22 @@ button {
 }
 .main-block__decor:hover {
   opacity: 1;
+}
+.main-block__decor:hover + .main-button {
+  -webkit-box-shadow: 0px 0px 15px rgba(243, 163, 98, 0.2);
+  box-shadow: 0px 0px 15px rgba(243, 163, 98, 0.2);
+}
+.main-block__decor::before {
+  content: "";
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 25%;
+  height: 100%;
+  background-image: -webkit-gradient(linear, right top, left top, from(#f3bb8d), to(rgba(243, 187, 141, 0)));
+  background-image: -webkit-linear-gradient(right, #f3bb8d 0%, rgba(243, 187, 141, 0) 100%);
+  background-image: linear-gradient(-90deg, #f3bb8d 0%, rgba(243, 187, 141, 0) 100%);
+  opacity: 0.1;
 }
 .main-block__call-back {
   position: absolute;
@@ -716,6 +775,7 @@ button {
   background-color: #fff;
   padding-top: 160px;
   position: relative;
+  z-index: 1;
 }
 .our-works__wrapper {
   display: -webkit-box;
@@ -841,12 +901,48 @@ button {
   width: 100%;
   padding-bottom: 140px;
   position: relative;
+  padding-top: 90px;
+  margin-top: -90px;
+  z-index: 2;
 }
 .offers-block .main_caption {
   text-align: center;
 }
 .offers-block .description-block {
   top: calc(50% + 140px);
+}
+.offers-block .text {
+  -webkit-transform: translate(calc(50% + 25px), calc(50% - 14px));
+  transform: translate(calc(50% + 25px), calc(50% - 14px));
+}
+.offers-block .svg-decor {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+.offers-block .svg-decor .decor-bg {
+  background: url(../img/decor-bg.png) repeat center;
+}
+.offers-block .svg-decor .offer-decor-bg {
+  position: absolute;
+  left: 50%;
+  top: 187px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 1668px;
+  height: 555px;
+  background: url(../img/decor-bg-1.png) repeat center;
+  opacity: 0.15;
+  z-index: 2;
+}
+.offers .text {
+  -webkit-transform: none;
+  transform: none;
 }
 .offers-block__background {
   position: absolute;
@@ -857,29 +953,6 @@ button {
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
-}
-.offers-block__background::before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0.8;
-}
-.offers-block__background::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 85px;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: 100%;
-  max-width: 1680px;
-  height: 640px;
-  background: url(../img/decor-bg.png) repeat center;
-  opacity: 0.5;
 }
 .offers-block__wrapper {
   padding-top: 130px;
@@ -1100,6 +1173,15 @@ button {
   width: 430px;
   margin-top: 40px;
 }
+.our-project__wrapper-info {
+  position: relative;
+}
+.our-project__wrapper-info .word-decor {
+  top: 50%;
+  left: 0px;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 .our-project__grid {
   width: 1040px;
   display: -webkit-box;
@@ -1207,6 +1289,7 @@ button {
   position: relative;
   border-bottom: 1px solid #4c443f;
   cursor: pointer;
+  outline: none;
 }
 .our-project__slider-overlay button .icon-arrow {
   font-size: 10px;
@@ -1382,6 +1465,14 @@ button {
   background: url(../img/decor-bg.png) repeat center;
   z-index: -1;
 }
+.buy-furniture__img .word-decor {
+  color: #4c443f;
+  left: -65px;
+  -webkit-transform: none;
+  transform: none;
+  z-index: 2;
+  background: none;
+}
 .buy-furniture__description {
   max-width: 910px;
 }
@@ -1449,6 +1540,10 @@ button {
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: relative;
   padding-bottom: 140px;
 }
@@ -1465,6 +1560,7 @@ button {
 }
 .implementation__description {
   width: 660px;
+  position: relative;
 }
 .implementation__description .main_caption span {
   font-size: 40px;
@@ -1472,6 +1568,24 @@ button {
 }
 .implementation__description .general__list {
   color: #4c443f;
+}
+.implementation__description::before {
+  content: "";
+  width: 480px;
+  height: 590px;
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background: url(../img/decor-bg.png) repeat center;
+  z-index: -1;
+}
+.implementation__description .word-decor {
+  top: -80px;
+  left: -33px;
+  -webkit-transform: none;
+  transform: none;
 }
 .implementation__button {
   margin-top: 40px;
@@ -1553,11 +1667,13 @@ button {
   transition: opacity 0.4s, -webkit-transform 0.6s;
   transition: transform 0.6s, opacity 0.4s;
   transition: transform 0.6s, opacity 0.4s, -webkit-transform 0.6s;
+  z-index: -1;
 }
 .implementation__slider-item.show {
   opacity: 1;
   -webkit-transform: translateX(0px);
   transform: translateX(0px);
+  z-index: 1;
 }
 .implementation__slider-item.show + .implementation__slider-item {
   -webkit-transform: translateX(1000px);
@@ -1630,6 +1746,9 @@ button {
   z-index: 4;
   background-color: rgba(246, 244, 242, 0.6);
 }
+.implemetation__slider-name p {
+  min-width: 133px;
+}
 .implementation__range {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1643,7 +1762,7 @@ button {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  position: absolute;
+  position: relative;
   left: 50%;
   width: 80px;
   height: 100%;
@@ -1681,7 +1800,7 @@ button {
   font-size: 12px;
   font-weight: 600;
   position: relative;
-  cursor: pointer;
+  cursor: ew-resize;
   -webkit-transition: color 0.4s;
   transition: color 0.4s;
 }
@@ -2126,8 +2245,9 @@ button {
   overflow: auto;
 }
 .popup.show {
-  -webkit-animation: show-popup 0.8s;
-  animation: show-popup 0.8s;
+  display: block;
+  -webkit-animation: show-popup 0.4s;
+  animation: show-popup 0.4s;
 }
 @-webkit-keyframes show-popup {
   0% {
@@ -2197,4 +2317,247 @@ button {
   font-size: 36px;
   text-align: center;
   margin-bottom: 25px;
+}
+.popup-close {
+  border: none;
+  background: none;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  cursor: pointer;
+  outline: none;
+}
+.popup-close:hover span:before {
+  color: #ababab;
+  -webkit-transition: color 0.4s;
+  transition: color 0.4s;
+}
+.popup-close:hover:active span:before {
+  color: #1a1a1a;
+}
+/* Portfolio slider */
+.popup__portfolio {
+  overflow: initial;
+}
+.popup__portfolio .wrapper {
+  position: relative;
+}
+.popup__portfolio-arrow {
+  position: absolute;
+  left: -55px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  border: none;
+  background: none;
+  cursor: pointer;
+  outline: none;
+}
+.popup__portfolio-arrow span {
+  color: #fff;
+}
+.popup__portfolio-arrow.prev {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.popup__portfolio-arrow.next {
+  left: initial;
+  right: -55px;
+}
+.popup__portfolio-arrow:hover span {
+  color: #f3a362;
+  -webkit-transition: color 0.4s;
+  transition: color 0.4s;
+}
+.popup__portfolio-arrow:hover:active span {
+  color: #1a1a1a;
+}
+.popup__portfolio__wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  position: absolute;
+  opacity: 0;
+  left: 0px;
+  top: 0px;
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+}
+.popup__portfolio__wrapper.show {
+  opacity: 1;
+  position: relative;
+}
+.popup__portfolio-information {
+  position: relative;
+  width: 450px;
+  padding: 60px;
+  color: #4c443f;
+}
+.popup__portfolio-information .main_caption {
+  font-size: 36px;
+  line-height: 44px;
+  margin-bottom: 30px;
+}
+.popup__portfolio-information p {
+  font-size: 15px;
+  line-height: 25px;
+  margin-bottom: 35px;
+}
+.popup__portfolio-information__list {
+  position: relative;
+}
+.popup__portfolio-information__item {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+}
+.popup__portfolio-information__item.show {
+  position: relative;
+  opacity: 1;
+  z-index: 2;
+}
+.popup__portfolio-information__item li {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  color: #4c443f;
+  font-size: 16px;
+  line-height: 28px;
+  border-bottom: 1px solid #d3d3d3;
+  margin-bottom: 30px;
+}
+.popup__portfolio-information__item .description {
+  font-size: 18px;
+  font-weight: 600;
+}
+.popup__portfolio-information__item .first-text {
+  height: 129px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+.popup__portfolio-slider {
+  width: 855px;
+}
+.portfolio-slider__img-list {
+  width: 855px;
+  height: 535px;
+  overflow: hidden;
+  position: relative;
+}
+.portfolio-slider__img-item {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+}
+.portfolio-slider__img-item.show {
+  opacity: 1;
+}
+.portfolio-slider__img-item img {
+  max-height: initial;
+  height: 100%;
+}
+.portfolio-slider__list__wrapper {
+  width: 855px;
+  height: 130px;
+  position: relative;
+  overflow: hidden;
+  margin-top: 10px;
+}
+.portfolio-slider__list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 10000px;
+  margin-left: 35px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: margin-left 0.8s;
+  transition: margin-left 0.8s;
+}
+.portfolio-slider__item {
+  width: 196px;
+  height: 130px;
+  position: relative;
+}
+.portfolio-slider__item::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  opacity: 1;
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+}
+.portfolio-slider__item.active::before {
+  opacity: 0;
+}
+.portfolio-slider__item img {
+  max-height: initial;
+  height: 100%;
+}
+.portfolio-slider__arrow {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  height: 100%;
+  width: 35px;
+  background-color: #877f7a;
+  border: 1px solid #877f7a;
+  outline: none;
+  cursor: pointer;
+  z-index: 3;
+}
+.portfolio-slider__arrow span {
+  color: #cfccca;
+}
+.portfolio-slider__arrow.prev {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.portfolio-slider__arrow.next {
+  left: initial;
+  right: 0px;
+}
+.portfolio-slider__arrow:hover {
+  background-color: #fff;
+  border-color: #f3a362;
+  -webkit-transition: background-color 0.4s, border-color 0.4s;
+  transition: background-color 0.4s, border-color 0.4s;
+}
+.portfolio-slider__arrow:hover span {
+  color: #f3a362;
+  -webkit-transition: color 0.4s;
+  transition: color 0.4s;
+}
+.portfolio-slider__arrow:hover:active {
+  border-color: #1a1a1a;
+}
+.portfolio-slider__arrow:hover:active span {
+  color: #1a1a1a;
 }
