--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -33,6 +33,7 @@ body {
     font-family: "Gilroy", sans-serif;
     overflow: hidden;
     min-width: 360px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 textarea {
@@ -42,6 +43,7 @@ textarea {
 button {
     font: inherit;
     color: inherit;
+    outline: none;
 }
 
 .container {
@@ -83,6 +85,7 @@ button {
     line-height: 90px;
     color: #4c443f;
     margin-bottom: 30px;
+    text-transform: uppercase;
 }
 
 .description-block {
@@ -91,8 +94,9 @@ button {
     position: absolute;
     font-size: 18px;
     line-height: 28px;
-    transform: rotate(-90deg)translateY(-50px);
-    left: -140px;
+    transform: rotate(-90deg) translateY(-50px);
+    width: 515px;
+    left: -150px;
     top: 50%;
     color: #98908b;
     
@@ -118,6 +122,7 @@ button {
     color: #eaeaea;
     font-family: "Gilroy", sans-serif;
     font-weight: 300;
+    font-size: 15px;
     line-height: 28px;
     padding: 20px 0px 20px 50px;
     position: relative;
@@ -133,6 +138,23 @@ button {
         background-color: #929292;
         transform: rotate(180deg);
     }
+}
+
+.word-decor {
+    font-family: 'Playfair Display SC';
+    font-size: 515px;
+    font-weight: 800;
+    line-height: 700px;
+    position: absolute;
+    left: 50%;
+    top: -155px;
+    transform: translateX(-50%);
+    background: url(../img/word-bg.png) repeat 15px;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    z-index: -1;
+    text-transform: uppercase;
 }
 
 /* Main-form */
