--- a/less/_icon.less
+++ b/less/_icon.less
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-close:before {
+  content: "\e908";
+  color: #cec2bb;
+}
 .icon-couple:before {
   content: "\e902";
   color: #877f7a;
