--- a/less/_main_block.less
+++ b/less/_main_block.less
@@ -8,34 +8,53 @@
     margin-top: -110px;
     position: relative;
     z-index: 1;
-    
-    &::before {
-        content: "";
-        position: absolute;
-        left: 50%;
-        bottom: -50px;
-        transform: translateX(-50%);
-        height: 110px;
-        width: 2px;
-        background-color: #959595;
-    }
 }
 
 .main-block__wrapper {
     display: flex;
     justify-content: space-between;
+    
+    .svg-decor {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        z-index: -1;
+        display: inline-block;
+        width: 100%;
+        padding-bottom: 55%; 
+        vertical-align: middle; 
+        overflow: hidden; 
+        
+        .text {
+           transform: translate(calc(50% - 18px), calc(50% - 7px));
+        }
+        
+       .svg-content {
+            display: inline-block;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    }
 }
 
 .main-block__item {
     width: 50%;
     padding-top: 220px;
     
-    &:last-child {
+    &:nth-child(2) {
         padding-left: 250px;
         
         .main-block__decor {
             left: initial;
             right: 0px;
+            
+            &::before {
+                right: initial;
+                left: 0px;
+                background-image: linear-gradient( 90deg, rgb(243,187,141) 0%, rgba(243,187,141,0) 100%);
+            }
         }
     }
     
@@ -53,14 +72,29 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    background-color: rgba(53, 48, 44, 0.902);
+    background-color: rgba(53, 48, 44, 0.9);
     width: 50%;
     z-index: -1;
     transition: opacity .4s;
     
     &:hover {
         opacity: 1;
-    }   
+        
+        + .main-button {
+            box-shadow: 0px 0px 15px rgba(243,163,98, 0.2);
+        }
+    }
+    
+    &::before {
+        content: "";
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        width: 25%;
+        height: 100%;
+        background-image: linear-gradient( -90deg, rgb(243,187,141) 0%, rgba(243,187,141,0) 100%);
+        opacity: 0.1;
+    }
 }
 
 
@@ -96,6 +130,18 @@
     background-color: #fff;
     padding-top: 160px;
     position: relative;
+    z-index: 1;
+    
+    &::before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: -50px;
+        transform: translateX(-50%);
+        height: 110px;
+        width: 2px;
+        background-color: #959595;
+    }
 }
 
 .our-works__wrapper {
@@ -113,6 +159,12 @@
         height: 110px;
         width: 2px;
         background-color: #959595;
+    }
+    
+    .word-decor {
+        line-height: 500px;
+        font-weight: 400;
+        left: calc(50% - 20px);
     }
 }
 
@@ -188,7 +240,7 @@
     &::before {
         content: "";
         position: absolute;
-        right: 224px;
+        right: 231px;
         bottom: -45px;
         width: 160px;
         height: 50px;
@@ -234,6 +286,10 @@
     width: 100%;
     padding-bottom: 140px;
     position: relative;
+    padding-top: 90px;
+    margin-top: -85px;
+    z-index: 2;
+    overflow: hidden;
     
     .main_caption {
         text-align: center;
@@ -242,8 +298,48 @@
     .description-block {
         top: calc(50% + 140px);
     }
+    
+    .text {
+        transform: translate(calc(50% + 25px), calc(50% - 21px));
+    }
+    
+    .svg-decor {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        z-index: -1;
+        display: inline-block;
+        width: 100%;
+        padding-bottom: 100%; 
+        vertical-align: middle; 
+        overflow: hidden; 
+        
+        .offer-decor-bg {
+            position: absolute;
+            left: 50%;
+            top: 10%;
+            transform: translateX(-50%);
+            width: 90%;
+            height: 555px;
+            background: url(../img/decor-bg-1.png) repeat center;
+            opacity: 0.15;
+            z-index: 2;
+        }
+        
+        .svg-content {
+            display: inline-block;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    }
 }
 
+.offers {
+    .text {
+        transform: translateY(-2px);
+    }
+}
 .offers-block__background {
     position: absolute;
     left: 0px;
@@ -258,38 +354,40 @@
         content: "";
         position: absolute;
         left: 0px;
-        top: 0px;
+        bottom: 0px;
         width: 100%;
-        height: 100%;
-        background-color: #fff;
-        opacity: 0.8;
+        height: 150px;
+        background-image: -moz-linear-gradient( 90deg, rgb(255,255,255) 0%, rgba(255,255,255,0) 100%);
+        background-image: -webkit-linear-gradient( 90deg, rgb(255,255,255) 0%, rgba(255,255,255,0) 100%);
+        background-image: -ms-linear-gradient( 90deg, rgb(255,255,255) 0%, rgba(255,255,255,0) 100%);
     }
     
-    &::after {
-        content: "";
+    .decor-line {
         position: absolute;
         left: 50%;
-        top: 85px;
+        top: 35px;
         transform: translateX(-50%);
-        width: 100%;
-        max-width: 1680px;
-        height: 640px;
-        background: url(../img/decor-bg.png) repeat center;
-        opacity: 0.5;
+        height: 110px;
+        width: 2px;
+        z-index: 7;
+        background-color: #959595;
     }
 }
 
 .offers-block__wrapper {
     padding-top: 130px;
+    position: relative;
 }
 
 .offers-block__list {
     display: flex;
     margin-right: -30px;
     margin-top: 40px;
+    overflow-x: scroll;
 }
 
 .offers-block__item {
+    flex-shrink: 0;
     width: 370px;
     background-color: #fff;
     margin-right: 30px;
@@ -483,17 +581,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
-    &::before {
-        content: "";
-        position: absolute;
-        left: 50%;
-        bottom: -50px;
-        transform: translateX(-50%);
-        height: 110px;
-        width: 2px;
-        background-color: #959595;
-    }
+    position: relative;
+    margin-top: -100px;
+    padding-top: 100px;
     
     .general__caption {
         color: #4c443f;
@@ -505,6 +595,17 @@
         color: #4c443f;
         width: 430px;
         margin-top: 40px;
+    }
+}
+
+.our-project__wrapper-info {
+    position: relative;
+    
+    .word-decor {
+        font-size: 720px;
+        top: 50%;
+        left: -25px;
+        transform: translateY(-50%);
     }
 }
 
@@ -600,6 +701,7 @@
         position: relative;
         border-bottom: 1px solid #4c443f;
         cursor: pointer;
+        outline: none;
         
         .icon-arrow {
             font-size: 10px;
@@ -621,10 +723,12 @@
     height: 60px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color: #fff;
     position: absolute;
-    left: 0px;
-    bottom: 0px;
+    left: -1px;
+    bottom: -1px;
+    z-index: 2;
     
     button {
         border: none;
@@ -694,27 +798,54 @@
     background-size: cover;
     background-position: left;
     z-index: -1;
+    overflow: hidden;
     
-    &::before {
-        content: "";
+    .svg-decor {
         position: absolute;
         left: 0px;
         top: 0px;
         width: 100%;
-        height: 100%;
-        background-color: rgb(38, 32, 28);
-        opacity: 0.8;
+        z-index: -1;
+        display: inline-block;
+        width: 100%;
+        padding-bottom: 75%; 
+        vertical-align: middle; 
+        overflow: hidden; 
+        
+        .text {
+           transform: translate(calc(50% - 35px), calc(50% - 5px));
+        }
+        
+       .svg-content {
+            display: inline-block;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
     }
 }
 .consultation__wrapper {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    position: relative;
     
     &::before {
         content: "";
         position: absolute;
         left: 50%;
-        bottom: -50px;
+        bottom: -135px;
+        transform: translateX(-50%);
+        height: 110px;
+        width: 2px;
+        background-color: #959595;
+    }
+    
+    &::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: -135px;
         transform: translateX(-50%);
         height: 110px;
         width: 2px;
@@ -724,6 +855,12 @@
     .main_caption {
         color: #fff;
         margin-bottom: 30px;
+    }
+    
+    .main-form__file {
+        button {
+            width: 320px;
+        }
     }
 }
 
@@ -750,6 +887,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    position: relative;
     
     .general__list {
         color: #4c443f;
@@ -770,6 +908,17 @@
         height: 560px;
         background: url(../img/decor-bg.png) repeat center;
         z-index: -1;
+    }
+    
+    .word-decor {
+        font-size: 455px;
+        font-weight: 400;
+        top: -41%;
+        color: #4c443f;
+        left: -65px;
+        transform: none;
+        z-index: 2;
+        background: none;
     }
 }
 
@@ -843,23 +992,14 @@
 .implementation__wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: relative;
     padding-bottom: 140px;
-    
-    &::before {
-        content: "";
-        position: absolute;
-        left: 50%;
-        bottom: -50px;
-        transform: translateX(-50%);
-        height: 110px;
-        width: 2px;
-        background-color: #959595;
-    }
 }
 
 .implementation__description {
     width: 660px;
+    position: relative;
     
     .main_caption {
         span {
@@ -870,6 +1010,25 @@
     
     .general__list {
         color: #4c443f;
+    }
+    
+    &::before {
+        content: "";
+        width: 480px;
+        height: 590px;
+        position: absolute;
+        left: 0px;
+        top: 50%;
+        transform: translateY(-50%);
+        background: url(../img/decor-bg.png) repeat center;
+        z-index: -1;
+    }
+    
+    .word-decor {
+        font-size: 775px;
+        top: -175px;
+        left: -33px;
+        transform: none;
     }
 }
 
@@ -953,10 +1112,12 @@
     opacity: 0;
     transform: translateX(-1000px);
     transition: transform .6s, opacity .4s;
+    z-index: -1;
     
     &.show {
         opacity: 1;
         transform: translateX(0px);
+        z-index: 1;
         
         +.implementation__slider-item {
             transform: translateX(1000px);
@@ -1029,13 +1190,17 @@
     font-weight: 600;
     z-index: 4;
     background-color: rgba(246, 244, 242, 0.6);
+    
+    p {
+        min-width: 133px;
+    }
 }
 
 .implementation__range {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    position: relative;
     left: 50%;
     width: 80px;
     height: 100%;
@@ -1064,7 +1229,7 @@
         font-size: 12px;
         font-weight: 600;
         position: relative;
-        cursor: pointer;
+        cursor: ew-resize;
         transition: color .4s;
         
         &:hover {
@@ -1115,7 +1280,7 @@
     position: relative;
     width: 100%;
     height: 860px;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
     
     &::before {
         content: "";
@@ -1138,28 +1303,56 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left;
-    z-index: -1;
+    z-index: 1;
+    overflow: hidden;
     
-    &::before {
-        content: "";
+    .svg-decor {
         position: absolute;
         left: 0px;
         top: 0px;
         width: 100%;
-        height: 100%;
-        background-color: rgb(38, 32, 28);
-        opacity: 0.8;
+        z-index: 1;
+        display: inline-block;
+        width: 100%;
+        padding-bottom: 67%; 
+        vertical-align: middle; 
+        overflow: hidden; 
+        
+        .text {
+           transform: translate(calc(50% - 30px), calc(50% - -3px));
+        }
+        
+       .svg-content {
+            display: inline-block;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
     }
 }
 .form-block__wrapper {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    z-index: 2;
+    position: relative;
     
     &::before {
         content: "";
         position: absolute;
         left: 50%;
-        bottom: -50px;
+        bottom: -190px;
+        transform: translateX(-50%);
+        height: 110px;
+        width: 2px;
+        background-color: #959595;
+    }
+    
+    &::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: -190px;
         transform: translateX(-50%);
         height: 110px;
         width: 2px;
@@ -1173,8 +1366,19 @@
 }
 
 .form-block__description {
-    max-width: 650px;
-    margin-right: 140px;
+    max-width: 600px;
+    margin-right: 200px;
+}
+
+.тень {
+  background-color: rgb(38, 32, 28);
+  opacity: 0.702;
+  position: absolute;
+  left: -21px;
+  top: 7657px;
+  width: 1968px;
+  height: 900px;
+  z-index: 47;
 }
 
 .main-form__wrapper {
@@ -1417,7 +1621,23 @@
 
 .contact {
     position: relative;
+    padding-top: 100px;
+    
+    .contact-word {
+        font-size: 600px;
+        font-family: 'Playfair Display SC';
+        color: #000;
+        opacity: 0.12;
+        position: absolute;
+        right: 180px;
+        bottom: -185%;
+    }
 }
+
+.contact__wrapper {
+    position: relative;
+}
+
 .contact__list {
     display: flex;
     justify-content: space-between;
