--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -138,6 +138,10 @@ button {
         background-color: #929292;
         transform: rotate(180deg);
     }
+
+    p {
+        max-width: 480px;
+    }
 }
 
 .word-decor {
@@ -206,7 +210,7 @@ button {
     margin-bottom: -10px;
     
     label {
-        width: 150px;
+        width: calc(25% - 20px);
         margin-bottom: 10px;
         cursor: pointer;
     }
@@ -228,7 +232,7 @@ button {
         display: inline-flex;
         justify-content: center;
         align-items: center;
-        width: 150px;
+        width: 100%;
         height: 40px;
         color: #877f7a;
         border: 1px solid #877f7a;
@@ -244,7 +248,7 @@ button {
     margin-bottom: -10px;
     
     label {
-        width: 150px;
+        width: calc(25% - 20px);
         display: flex;
         margin-bottom: 11px;
         cursor: pointer;
