--- a/less/_popup.less
+++ b/less/_popup.less
@@ -253,6 +253,7 @@
 .popup__portfolio-information__list {
     position: relative;
     height: 387px;
+    overflow: hidden;
 }
 
 .popup__portfolio-information__item {
