--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,9 @@ button {
   background-color: #929292;
   transform: rotate(180deg);
 }
+.general__list p {
+  max-width: 480px;
+}
 .word-decor {
   font-family: 'Playfair Display SC';
   font-size: 515px;
@@ -180,7 +183,7 @@ button {
   margin-bottom: -10px;
 }
 .main-form__square label {
-  width: 150px;
+  width: calc(25% - 20px);
   margin-bottom: 10px;
   cursor: pointer;
 }
@@ -197,7 +200,7 @@ button {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 150px;
+  width: 100%;
   height: 40px;
   color: #877f7a;
   border: 1px solid #877f7a;
@@ -211,7 +214,7 @@ button {
   margin-bottom: -10px;
 }
 .main-form__type label {
-  width: 150px;
+  width: calc(25% - 20px);
   display: flex;
   margin-bottom: 11px;
   cursor: pointer;
@@ -555,10 +558,12 @@ button {
   margin-top: -110px;
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 .main-block__wrapper {
   display: flex;
   justify-content: space-between;
+  overflow: hidden;
 }
 .main-block__wrapper .svg-decor {
   position: absolute;
@@ -567,12 +572,13 @@ button {
   z-index: -1;
   display: inline-block;
   width: 100%;
-  padding-bottom: 55%;
+  padding-bottom: 300%;
   vertical-align: middle;
   overflow: hidden;
 }
 .main-block__wrapper .svg-decor .text {
-  transform: translate(calc(50% - 18px), calc(50% - 7px));
+  transform: translate(0px, -120px);
+  font-size: 50px;
 }
 .main-block__wrapper .svg-decor .svg-content {
   display: inline-block;
@@ -798,7 +804,7 @@ button {
   top: calc(50% + 140px);
 }
 .offers-block .text {
-  transform: translate(calc(50% + 25px), calc(50% - 21px));
+  transform: translate(calc(50% + 25px), calc(50% - 71px));
 }
 .offers-block .svg-decor {
   position: absolute;
@@ -807,14 +813,14 @@ button {
   z-index: -1;
   display: inline-block;
   width: 100%;
-  padding-bottom: 100%;
+  padding-bottom: 200%;
   vertical-align: middle;
   overflow: hidden;
 }
 .offers-block .svg-decor .offer-decor-bg {
   position: absolute;
   left: 50%;
-  top: 10%;
+  top: 5%;
   transform: translateX(-50%);
   width: 90%;
   height: 555px;
@@ -840,6 +846,7 @@ button {
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
+  overflow: hidden;
 }
 .offers-block__background::before {
   content: "";
@@ -870,7 +877,6 @@ button {
   display: flex;
   margin-right: -30px;
   margin-top: 40px;
-  overflow-x: scroll;
 }
 .offers-block__item {
   flex-shrink: 0;
@@ -919,6 +925,12 @@ button {
   width: initial;
   box-shadow: none;
   padding: 0px;
+}
+.offers-block__item .main-form__square label {
+  width: calc(50% - 10px);
+}
+.offers-block__item .main-form__type label {
+  width: calc(50% - 10px);
 }
 .offers_button__wrapper {
   position: relative;
@@ -1224,12 +1236,12 @@ button {
   z-index: -1;
   display: inline-block;
   width: 100%;
-  padding-bottom: 75%;
+  padding-bottom: 150%;
   vertical-align: middle;
   overflow: hidden;
 }
 .consultatin-bg .svg-decor .text {
-  transform: translate(calc(50% - 35px), calc(50% - 5px));
+  transform: translate(calc(50% - 35px), calc(50% - 52px));
 }
 .consultatin-bg .svg-decor .svg-content {
   display: inline-block;
@@ -1278,6 +1290,9 @@ button {
   max-width: 650px;
   margin-right: 140px;
 }
+.consultation__description p {
+  max-width: 590px;
+}
 /* Consultation */
 /* Furniture */
 .buy-furniture {
@@ -1320,6 +1335,9 @@ button {
 }
 .buy-furniture__description {
   max-width: 910px;
+}
+.buy-furniture__description .general__list p {
+  max-width: 100%;
 }
 .buy-furniture__list {
   display: flex;
@@ -1381,7 +1399,7 @@ button {
   padding-bottom: 140px;
 }
 .implementation__description {
-  width: 660px;
+  max-width: 660px;
   position: relative;
 }
 .implementation__description .main_caption span {
@@ -1390,6 +1408,9 @@ button {
 }
 .implementation__description .general__list {
   color: #4c443f;
+}
+.implementation__description .general__list p {
+  max-width: 590px;
 }
 .implementation__description::before {
   content: "";
@@ -1649,12 +1670,12 @@ button {
   z-index: 1;
   display: inline-block;
   width: 100%;
-  padding-bottom: 67%;
+  padding-bottom: 200%;
   vertical-align: middle;
   overflow: hidden;
 }
 .form-block-bg .svg-decor .text {
-  transform: translate(calc(50% - 30px), calc(50% - -3px));
+  transform: translate(calc(50% - 30px), calc(50% - 45px));
 }
 .form-block-bg .svg-decor .svg-content {
   display: inline-block;
@@ -2172,6 +2193,7 @@ button {
 .popup__portfolio-information__list {
   position: relative;
   height: 387px;
+  overflow: hidden;
 }
 .popup__portfolio-information__item {
   position: absolute;
@@ -2308,8 +2330,12 @@ button {
   pointer-events: none;
 }
 @media (max-width: 1715px) {
+  /* General */
+  html.overflow {
+    margin-right: 0px;
+  }
   .container {
-    max-width: 1200px;
+    max-width: 1230px;
   }
   .general__caption {
     font-size: 62px;
@@ -2319,6 +2345,10 @@ button {
     font-size: 52px;
     line-height: 60px;
   }
+  .description-block {
+    left: -180px;
+  }
+  /* /General */
   /* Main- block */
   .main-block {
     height: 740px;
@@ -2328,6 +2358,9 @@ button {
   }
   .main-block__item:nth-child(2) {
     padding-left: 70px;
+  }
+  .main-block__decor {
+    display: none;
   }
   /* /Main- block */
   /* Our works */
@@ -2357,7 +2390,7 @@ button {
   .our-works__block:nth-child(2) {
     display: flex;
     justify-content: flex-end;
-    margin: 100px 0px;
+    margin: 110px 0px;
   }
   .our-works__block:nth-child(2) .our-works__list-wrapper {
     left: 15px;
@@ -2381,6 +2414,8 @@ button {
     padding: 30px;
     margin-right: -70px;
     margin-top: -30px;
+    margin-left: -30px;
+    overflow-x: scroll;
   }
   /* /Offers */
   /* Our project */
@@ -2405,7 +2440,565 @@ button {
   }
   /* /Our project */
   /* Consultation */
-  .consultatin-bg .svg-decor {
-    padding-bottom: 100%;
+  .consultation__description {
+    max-width: 450px;
+    margin-right: 20px;
+  }
+  .consultation__wrapper .main-form__file button {
+    width: 300px;
+  }
+  .main-form .main-button {
+    max-width: 300px;
+  }
+  .main-form__callback .main-input {
+    width: 300px;
+  }
+  /* /Consultation */
+  /* Furniture */
+  .buy-furniture__description {
+    max-width: 700px;
+  }
+  .buy-furniture__img {
+    width: 390px;
+    height: 510px;
+  }
+  .buy-furniture__img .word-decor {
+    top: -43%;
+  }
+  .buy-furniture__wrapper {
+    align-items: center;
+  }
+  /* Furniture */
+  /* Implementation */
+  .implementation__slider-list {
+    width: 650px;
+    height: 680px;
+  }
+  .implementation__description {
+    max-width: 430px;
+    margin-right: 30px;
+  }
+  /* Implementation */
+  /* Form-block */
+  .form-block__description {
+    max-width: 430px;
+    margin-right: 30px;
+  }
+  .main-form__caption {
+    font-size: 36px;
+  }
+  /* Contact */
+  .contact .contact-word {
+    right: 100px;
+  }
+  /* Contact */
+  /* Popup */
+  .popup__portfolio-arrow.next {
+    right: -27px;
+  }
+  .popup__portfolio-arrow.prev {
+    left: -27px;
+  }
+  /* Popup */
+}
+@media (max-width: 1366px) {
+  /* General */
+  .container {
+    max-width: 720px;
+  }
+  .main-form {
+    width: 720px;
+  }
+  .main_caption {
+    text-align: center;
+  }
+  /* General */
+  /* Header */
+  .header__list {
+    display: none;
+  }
+  .header__call-back .header__call-back__button {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: #f3a362;
+    font-size: 16px;
+    text-transform: uppercase;
+  }
+  .header__call-back a {
+    font-size: 20px;
+  }
+  /* /Header */
+  /* Main block */
+  .main-block {
+    height: 1080px;
+  }
+  .main-block__wrapper {
+    flex-direction: column;
+    padding-top: 170px;
+  }
+  .main-block__wrapper .svg-decor .text {
+    transform: translate(0px, -100px);
+    font-size: 65px;
+  }
+  .main-block__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 0px;
+  }
+  .main-block__item:nth-child(2) {
+    padding: 0px;
+    margin-top: 105px;
+  }
+  .main-block__item .general__list {
+    text-align: center;
+  }
+  .general__list {
+    padding: 0px;
+    margin: 50px 0px 40px;
+  }
+  .general__list::before {
+    display: none;
+  }
+  .general__caption {
+    font-size: 58px;
+    line-height: 60px;
+  }
+  .main-block__call-back {
+    bottom: 90px;
+  }
+  /* /Main block */
+  /* Our works */
+  .our-works__wrapper {
+    padding-bottom: 180px;
+  }
+  .our-works__wrapper .word-decor {
+    left: initial;
+    transform: none;
+    right: -10px;
+  }
+  .ou-works__img {
+    width: 500px;
+    height: 590px;
+  }
+  .ou-works__img::before {
+    bottom: -50px;
+  }
+  .our-works__block .our-works__list-wrapper {
+    right: 70px;
+  }
+  .our-works__block .our-works__list-wrapper::before {
+    height: 570px;
+  }
+  .our-works__block:nth-child(2) .our-works__list-wrapper {
+    left: 70px;
+  }
+  .our-works__button {
+    bottom: 130px;
+  }
+  /* /Our works */
+  /* Offers */
+  .offers-block .text {
+    transform: translate(calc(50% + -32px), calc(50% - 55px));
+    font-size: 60px;
+  }
+  .offers-block .svg-decor .top-line {
+    height: 7px;
+  }
+  .offers-block .svg-decor .decor-bg {
+    height: 120px;
+  }
+  .offers-block .svg-decor .offer-decor-bg {
+    height: 100%;
+  }
+  .offers .text {
+    transform: translate(70px, 20px);
+    font-size: 60px;
+  }
+  .offers-block__item {
+    width: 330px;
+    margin-right: 20px;
+  }
+  .main-form__title {
+    font-size: 17px;
+  }
+  .main-form__file button {
+    width: 100%;
+  }
+  .offers-block__wrapper {
+    padding-top: 115px;
+  }
+  /* Offers */
+  /* Out project */
+  .our-project__wrapper {
+    overflow: hidden;
+  }
+  .our-project__wrapper .general__list {
+    width: 100%;
+    margin-bottom: 90px;
+  }
+  .our-project__wrapper .general__list p {
+    max-width: 100%;
+  }
+  .our-project__slider {
+    right: -345px;
+  }
+  .our-project__wrapper-info {
+    flex-direction: column;
+    text-align: center;
+  }
+  .our-project__wrapper-info .main_caption {
+    width: 100%;
+    margin-right: 0px;
+  }
+  .our-project__wrapper-info .word-decor {
+    font-size: 600px;
+    left: 100px;
+    top: 50%;
+    transform: translateY(-47%);
+  }
+  /* Out project */
+  /* Consultation */
+  .consultatin-bg {
+    width: 100%;
+    height: 640px;
+  }
+  .consultation {
+    height: 1260px;
+    margin-bottom: 125px;
+  }
+  .consultation::before {
+    width: 100%;
+    height: 620px;
+    top: initial;
+    bottom: 0px;
+  }
+  .consultation__wrapper {
+    flex-direction: column;
+    margin-top: 100px;
+  }
+  .consultation__wrapper::after {
+    top: -205px;
+  }
+  .consultation__wrapper::before {
+    display: none;
+  }
+  .consultation__description {
+    max-width: 100%;
+    margin-right: 0px;
+  }
+  /* Consultation */
+  /* Furniture */
+  .buy-furniture__wrapper {
+    flex-direction: column;
+    padding-top: 285px;
+  }
+  .buy-furniture__description .wrapper {
+    position: absolute;
+    left: 50%;
+    top: 0px;
+    width: 100%;
+    transform: translateX(-50%);
+  }
+  .buy-furniture__description .general__list {
+    text-align: center;
+  }
+  .buy-furniture__img {
+    width: 560px;
+    height: 660px;
+    margin-bottom: 85px;
+  }
+  .buy-furniture__img img {
+    width: 100%;
+  }
+  /* Furniture */
+  /* Implementation */
+  .implementation__wrapper {
+    flex-direction: column;
+    padding-bottom: 120px;
+  }
+  .implementation__slider-list {
+    width: 720px;
+    height: 750px;
+  }
+  .implementation__description {
+    max-width: 100%;
+    margin-right: 0px;
+    margin-bottom: 100px;
+  }
+  .implementation__description .main_caption {
+    max-width: 600px;
+  }
+  .implementation__description .main_caption span {
+    font-size: 28px;
+  }
+  .implementation__description .word-decor {
+    font-size: 730px;
+    left: 78px;
+    top: -200px;
+  }
+  .implementation__description::before {
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 570px;
+  }
+  /* Furniture */
+  /* Main-form */
+  .form-block-bg {
+    width: 100%;
+    height: 640px;
+  }
+  .form-block-bg .svg-decor .text {
+    transform: translate(calc(50% - 17px), calc(50% - 52px));
+  }
+  .form-block {
+    height: 1130px;
+    margin-bottom: 125px;
+  }
+  .form-block::before {
+    width: 100%;
+    height: 485px;
+    top: initial;
+    bottom: 0px;
+  }
+  .form-block__wrapper {
+    flex-direction: column;
+    margin-top: 100px;
+  }
+  .form-block__wrapper::after {
+    top: -205px;
+  }
+  .form-block__wrapper::before {
+    display: none;
+  }
+  .form-block__description {
+    max-width: 100%;
+    margin-right: 0px;
+  }
+  .main-form__wrapper {
+    width: 720px;
+    margin-top: 110px;
+  }
+  .main-form__wrapper .main-form__file button {
+    width: 230px;
+  }
+  .main-form__wrapper .main-form__file button span {
+    left: 20px;
+  }
+  .main-form__header .main-form__caption {
+    font-size: 36px;
+  }
+  /* Main-form */
+  /* Contact */
+  .contact {
+    padding-top: 0px;
+  }
+  .contact .contact-word {
+    right: 0px;
+    bottom: initial;
+    top: -50%;
+  }
+  .contact__item {
+    padding: 0px 0px 0px 20px;
+  }
+  .contact__item:nth-child(1) {
+    width: 270px;
+  }
+  .contact__item:nth-child(2) {
+    width: 200px;
+  }
+  .contact__item:nth-child(3) {
+    width: 220px;
+  }
+  .contact__item p {
+    font-size: 16px;
+  }
+  /* Contact */
+  /* Popup */
+  .popup__portfolio {
+    width: 720px;
+    padding: 20px;
+    background-color: #fff;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding-bottom: 50px;
+  }
+  .popup__portfolio-arrow {
+    top: initial;
+    bottom: 10px;
+    transform: none;
+  }
+  .popup__portfolio-arrow:hover span {
+    color: #000;
+    transition: none;
+  }
+  .popup__portfolio-arrow span {
+    color: #000;
+    font-size: 26px;
+  }
+  .popup__portfolio-arrow.prev {
+    left: calc(50% - 60px);
+  }
+  .popup__portfolio-arrow.next {
+    right: calc(50% - 60px);
+  }
+  .popup__portfolio__wrapper {
+    flex-direction: column;
+  }
+  .popup__portfolio__wrapper .popup__portfolio-form {
+    width: 720px;
+    right: -20px;
+    top: initial;
+    bottom: -10px;
+    height: 550px;
+    padding: 10px 20px;
+    box-shadow: none;
+  }
+  .popup__portfolio__wrapper .popup__portfolio-form .popup-close {
+    right: 40px;
+    top: 40px;
+  }
+  .popup__portfolio__wrapper .popup__portfolio-form .main-button {
+    max-width: 300px;
+  }
+  .popup__portfolio__wrapper .main-form {
+    padding: 20px 10px 30px;
+    box-shadow: none;
+  }
+  .popup__portfolio__wrapper .main-form__title {
+    margin: 8px 0px 22px;
+  }
+  .popup__portfolio__wrapper .main-form__file button {
+    width: 300px;
+  }
+  .popup__portfolio-information {
+    width: 100%;
+    padding: 0px;
+    margin-bottom: 20px;
+  }
+  .popup__portfolio-information .main_caption {
+    font-size: 32px;
+  }
+  .popup__portfolio-information .main-button {
+    margin: 20px auto 0px;
+  }
+  .popup__portfolio-slider {
+    width: 100%;
+  }
+  .portfolio-slider__img-list {
+    width: 100%;
+    height: 420px;
+  }
+  .popup__portfolio-information__list {
+    height: 170px;
+  }
+  .portfolio-slider__list__wrapper {
+    width: 100%;
+    height: 100px;
+  }
+  .portfolio-slider__item {
+    width: 150px;
+    height: 100px;
+  }
+  .popup__portfolio-information__item ul {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .popup__portfolio-information__item li {
+    width: calc(50% - 30px);
+    margin-bottom: 15px;
+  }
+  .popup__portfolio-information__item .first-text {
+    height: 70px;
+  }
+  .popup__consultation .main-form__file button {
+    width: 300px;
+  }
+  /* Popup */
+}
+@media (max-width: 1024px) {
+  .main-block__wrapper .svg-decor .text {
+    transform: translate(0px, -85px);
+    font-size: 95px;
+  }
+  .offers-block .text {
+    transform: translate(calc(50% - 42px), calc(50% - 40px));
+    font-size: 80px;
+  }
+  .offers .text {
+    transform: translate(65px, 35px);
+  }
+  .consultatin-bg .svg-decor .text {
+    font-size: 60px;
+    transform: translate(calc(50% - 35px), calc(50% - 45px));
+  }
+}
+@media (max-width: 768px) {
+  /* General */
+  .container {
+    max-width: 360px;
+  }
+  .main_caption {
+    font-size: 32px;
+    line-height: 46px;
+  }
+  .description-block {
+    display: none;
+  }
+  /* /General */
+  /* Header */
+  .header__call-back a {
+    font-size: 14px;
+  }
+  /* Header */
+  /* Main block */
+  .general__caption {
+    text-align: center;
+    font-size: 36px;
+    line-height: 44px;
+  }
+  .main-block__wrapper {
+    padding-top: 125px;
+  }
+  .main-block__wrapper .svg-decor .text {
+    transform: translate(0px, -50px);
+    font-size: 95px;
+  }
+  .main-block__item .general__list {
+    margin: 30px 0px;
+  }
+  .main-block__item:nth-child(2) {
+    margin-top: 70px;
+  }
+  .main-block__call-back {
+    bottom: 120px;
+  }
+  /* Main-block */
+  /* Our project */
+  .our-project__slider {
+    right: -700px;
+  }
+  .our-project__wrapper .general__list {
+    margin-bottom: 30px;
+  }
+  .our-project__wrapper-info .word-decor {
+    font-size: 480px;
+    left: 0px;
+    transform: translateY(-45%);
+  }
+  /* Offers */
+  .offers-block .svg-decor .top-line {
+    height: 10px;
+  }
+  .offers-block .svg-decor .decor-bg {
+    transform: translateY(12px);
+  }
+  .offers-block .svg-decor .offer-decor-bg {
+    top: 11%;
   }
 }
